# MATIKA_PROTOTYPE

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
accounts/: admin.py  apps.py  context_processors.py  forms.py  middleware.py  mixins.py  models.py  notification_kinds.py  notifications.py  push.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_verbose_name_labels.py  (+7 more)
dashboard/: apps.py  urls.py  views.py
data/: kaznpu_faculty1_anonymized.json
docs/: diploma_matika.md  generate_diploma_docx.py  slot_unfitness_formulas.md  Дипломка документация.docx
matika/: asgi.py  demo_name_cleanup.py  demo_seed_aliases.py  kazakh_demo_names.py  settings.py  settings_prod.py  urls.py  wsgi.py
scheduling/: admin.py  api_views.py  apps.py  forms.py  ics.py  lms_simulation.py  ml_predict.py  models.py  period.py  schedule_queryset.py  services.py  urls.py  views.py  xlsx.py
scripts/: compile_locale.py  merge_seed_i18n.py
static/: manifest.json  sw.js
templates/: base.html
tests/: __init__.py  conftest.py  test_accounts_views.py  test_ml_predict_core.py  test_ml_slot_penalty.py  test_profile_approval.py  test_schedule_constraints.py  test_scheduling_access.py  test_scheduling_api_ics.py  test_scheduling_services.py
university/: admin.py  apps.py  forms.py  models.py  scope.py  translation_catalog.py  urls.py  utils.py  views.py
(+81 files in other folders)
